--- a/documentation/htmlFiles/modeling.html
+++ b/documentation/htmlFiles/modeling.html
@@ -16,37 +16,276 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <!-- Style CSS -->
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/grayscale.css">
-  <link rel="stylesheet" href="/css/standards.css">
-  <!-- <link rel="stylesheet" href="css/home.css"> -->
-  <link rel="stylesheet" href="/css/documentation.css">
+  <script>
+    MathJax = {
+      tex: {
+        inlineMath: [
+          ['$', '$'],
+          ['$$', '$$'],
+          ['\\(', '\\)'],
+        ],
+      },
+    };
+  </script>
+  
+  <script>
+    window.ZeroMdConfig = {
+      cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
+    }
+  </script>
+  
+  <script
+    type="module"
+    src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
+  ></script>
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
-  <section class="header">
-    <div class="topLeftLogo">      
-        <div class="headerLogoContainer">
-          <img class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+    <section class="header">
+      <div class="topLeftLogo">  
+          <!-- logo top left -->
+          <div class="headerLogoContainer">
+            <img id="logo" class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+          </div>
+          <!-- nav bar top right; same for all -->
+          <div class="headerNavBar">
+            <details>
+              <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
+              <div class="navBarSection">
+                <details>
+                  <summary class="navTitle">User Guides</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/quickguide.html">Getting Started</p>
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/modeling.html">Modeling Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/meshing.html">Meshing Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/svfsi.html">svFSI Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/genbc.html">General B.C. Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/python_interface.html">Python Interface</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/references.html">References</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
+                    </div>
+                  </div>
+                </details>
+                <details>
+                  <summary class="navTitle">Clinical Cases</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase3.html">Coronary Normal</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="">Healthy Pulmonary</a>                  
+                    </div>
+                  </div>
+                </details>
+                <details>
+                  <summary class="navTitle">Developer Guides</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
+                    </div>
+                  </div>
+                </details>
+              </div>
+          </div>
+        </div>
+    </section>
+
+  <section class="mainSection">
+    <section class="navigationSection" style="float: left">
+      <div>
+        <h4 class="skipTo modelingIntro">Introduction</h4>
+      </div>
+      <div>
+        <h4 class="skipTo modelingPathPlanning">Path Planning</h4>
+        <div>
+          <p class="skipTo modelingCreatingPath">Creating a Path</p>
+          <p class="skipTo modelingSmoothingPath">Smoothing a Path</p>
+          <p class="skipTo modelingImportingExportingPaths">Importing/Exporting Paths</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo modelingSegmentation">Segmentation</h4>
+        <div>
+          <p class="skipTo modelingUsingGroups">Using Groups</p>
+          <p class="skipTo modelingThresholding">Using Thresholding to Define a Countour</p>
+          <p class="skipTo modelingLevelSet">Using Level Sets to Define a Countour</p>
+          <p class="skipTo modelingMachineLearning">Automatic Machine Learning Segmentations</p>
+          <p class="skipTo modelingManual">Segmenting an Image Manually</p>
+          <p class="skipTo modeling3DSeg">3D Level Set Segmentation</p>
+          <p class="skipTo modelingCopyingPastingContours">Copying and Pasting Contours</p>
+          <p class="skipTo modelingLoftingPreview">Lofting Preview</p>
+          <p class="skipTo modelingImportingExportingGroups">Importing/Exporting Segmentations</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo modelingSolidModelingPolyData">Solid Modeling (PolyData)</h4>
+        <div>
+          <p class="skipTo modelingCreatingModelsPolyData">Creating Models from 2D Segmentations</p>
+          <p class="skipTo modelingPolyDataFaces">Face Operations</p>
+          <p class="skipTo modelingEditingPolyData">Global/Local Operations</p>
+          <p class="skipTo modelingCenterlinesPolyData">Extracting Centerlines</p>
+          <p class="skipTo modelingImportingExportingModels">Importing/Exporting Models</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo modelingSolidModelingAnalytic">Solic Modeling (Analytic)</h4>
+        <div>    
+          <p class="skipTo modelingCreatingModelsAnalytic">Creating Solid Models</p>
+          <p class="skipTo modelingBlendingAnalytic">Blending the Junction of Two Vessels</p>
         </div>
       </div>
     </section>
 
-  <section class="mainSection">
-    <form class="mainBody"> 
-      <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
-    </form>
+    <section class="docsSection" style="float: right">
+      <span id="modelingIntro">
+        <zero-md class="embedMath" src="/documentation/modeling/_intro.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingPathPlanning">
+        <zero-md class="embedMath" src="/documentation/modeling/_pathPlanning.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingCreatingPath">
+        <zero-md class="embedMath" src="/documentation/modeling/_creatingPath.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingSmoothingPath">
+        <zero-md class="embedMath" src="/documentation/modeling/_smoothingPath.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingImportingExportingPaths">
+        <zero-md class="embedMath" src="/documentation/modeling/_importingExportingPaths.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingSegmentation">
+        <zero-md class="embedMath" src="/documentation/modeling/_segmentation.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingUsingGroups">
+        <zero-md class="embedMath" src="/documentation/modeling/_usingGroups.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingThresholding">
+        <zero-md class="embedMath" src="/documentation/modeling/_thresholding.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingLevelSet">
+        <zero-md class="embedMath" src="/documentation/modeling/_levelSet.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingMachineLearning">
+        <zero-md class="embedMath" src="/documentation/modeling/_machinelearning.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingManual">
+        <zero-md class="embedMath" src="/documentation/modeling/_manual.md" no-shadow></zero-md>
+      </span>
+      <span id="modeling3DSeg">
+        <zero-md class="embedMath" src="/documentation/modeling/_3DSeg.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingCopyingPastingContours">
+        <zero-md class="embedMath" src="/documentation/modeling/_copyingPastingContours.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingLoftingPreview">
+        <zero-md class="embedMath" src="/documentation/modeling/_loftingpreview.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingImportingExportingGroups">
+        <zero-md class="embedMath" src="/documentation/modeling/_importingExportingGroups.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingSolidModelingPolyData">
+        <zero-md class="embedMath" src="/documentation/modeling/_solidModelingPolyData.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingCreatingModelsPolyData">
+        <zero-md class="embedMath" src="/documentation/modeling/_creatingModelsPolyData.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingPolyDataFaces">
+        <zero-md class="embedMath" src="/documentation/modeling/_polyDataFaces.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingEditingPolyData">
+        <zero-md class="embedMath" src="/documentation/modeling/_editingPolyData.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingCenterlinesPolyData">
+        <zero-md class="embedMath" src="/documentation/modeling/_centerlinesPolyData.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingImportingExportingModels">
+        <zero-md class="embedMath" src="/documentation/modeling/_importingExportingModels.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingSolidModelingAnalytic">
+        <zero-md class="embedMath" src="/documentation/modeling/_solidModelingAnalytic.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingCreatingModelsAnalytic">
+        <zero-md class="embedMath" src="/documentation/modeling/_creatingModelsAnalytic.md" no-shadow></zero-md>
+      </span>
+      <span id="modelingBlendingAnalytic">
+        <zero-md class="embedMath" src="/documentation/modeling/_blendingAnalytic.md" no-shadow></zero-md>
+      </span>
+    </section>
+  </section>
+  <section class="skipToTopSection">
+    <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
   </section>
 
-  <!-- Lightweight client-side loader that feature-detects and load polyfills only when necessary -->
-  <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
 
-  <!-- Load the element definition -->
-  <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
-  </body>
+  <script>
+    var allZero_MD_File = document.getElementsByClassName("embedMath");
+    for(var i = 0; i < allZero_MD_File.length; i++)
+    {
+      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+      var el = document.createElement('script');
+      el.src = 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js';
+      document.head.appendChild(el);
+    });
+    }
+    
+  </script>
+
+  <!-- Style CSS -->
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/grayscale.css">
+  <link rel="stylesheet" href="/css/standards.css">
+  <link rel="stylesheet" href="/css/documentation.css">
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <script src="/js/jquery-2.1.1.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
+
+  <!-- <script src="js/jquery-2.1.1.js"></script> -->
+  <script src="/js/jquery.mixitup.min.js"></script>
+
+  
+
+  <script src="/js/documentation.js"></script>
+
+</body>
   
 </html>
