fix missing section

--- a/documentation/htmlFiles/meshing.html
+++ b/documentation/htmlFiles/meshing.html
@@ -147,6 +147,9 @@
           <p class="skipTo tetgenerrors">TetGen Errors</p>
         </div>
       </div>
+      <div>
+        <h4 class="skipTo inspectingmeshes">Inspecting Meshes</h4>
+      </div>
     </section>
 
     <section class="docsSection" style="float: right">
