--- a/documentation/htmlFiles/simcardio.html
+++ b/documentation/htmlFiles/simcardio.html
@@ -16,37 +16,336 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <!-- Style CSS -->
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/grayscale.css">
-  <link rel="stylesheet" href="/css/standards.css">
-  <!-- <link rel="stylesheet" href="css/home.css"> -->
-  <link rel="stylesheet" href="/css/documentation.css">
+  <script>
+    MathJax = {
+      tex: {
+        inlineMath: [
+          ['$', '$'],
+          ['$$', '$$'],
+          ['\\(', '\\)'],
+        ],
+      },
+    };
+  </script>
+  
+  <script>
+    window.ZeroMdConfig = {
+      cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
+    }
+  </script>
+  
+  <script
+    type="module"
+    src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
+  ></script>
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
-  <section class="header">
-    <div class="topLeftLogo">      
-        <div class="headerLogoContainer">
-          <img class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+    <section class="header">
+      <div class="topLeftLogo">  
+          <!-- logo top left -->
+          <div class="headerLogoContainer">
+            <img id="logo" class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+          </div>
+          <!-- nav bar top right; same for all -->
+          <div class="headerNavBar">
+            <details>
+              <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
+              <div class="navBarSection">
+                <details>
+                  <summary class="navTitle">User Guides</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/quickguide.html">Getting Started</p>
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/modeling.html">Modeling Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/meshing.html">Meshing Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/svfsi.html">svFSI Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/genbc.html">General B.C. Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/python_interface.html">Python Interface</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/references.html">References</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
+                    </div>
+                  </div>
+                </details>
+                <details>
+                  <summary class="navTitle">Clinical Cases</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase3.html">Coronary Normal</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="">Healthy Pulmonary</a>                  
+                    </div>
+                  </div>
+                </details>
+                <details>
+                  <summary class="navTitle">Developer Guides</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
+                    </div>
+                  </div>
+                </details>
+              </div>
+          </div>
+        </div>
+    </section>
+
+  <section class="mainSection">
+    <section class="navigationSection" style="float: left">
+      <div>
+        <h4 class="skipTo introduction">Introduction</h4>
+      </div>
+      <div>
+        <h4 class="skipTo automatic-cardiac-modeling">Cardiac Geometric Modeling Tool</h4>
+        <div>
+          <p class="skipTo seg-intro">Automated Image Segmentation</p>
+          <p class="skipTo seg-inputs">Introduction</p>
+          <p class="skipTo seg-pre-trained-models">Input Requirements</p>
+          <p class="skipTo seg-predict">Pre-Trained Models</p>
+          <p class="skipTo seg-visualize">Segmenting Image Data</p>
+          <p class="skipTo mesh-intro">Mesh Generation</p>
+          <p class="skipTo mesh-lv-surface">Constructing Surface Meshes</p>
+          <p class="skipTo mesh-volume">Volumetric Meshing</p>
+          <p class="skipTo mesh-register">Mesh Registration</p>
+          <p class="skipTo mesh-motion">Mesh Motion</p>
+          <p class="skipTo refs">References</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo cep-modeling">Cardiac Electro-physiology Modeling</h4>
+        <div>
+          <p class="skipTo cep-intro">Introduction</p>
+          <p class="skipTo cep-theory">Mathematical Formulation</p>
+          <p class="skipTo cep-activation-models">Cellular Activation Models</p>
+          <p class="skipTo purkinje">Purkinje Network</p>
+          <p class="skipTo pnet-intro">Introduction</p>
+          <p class="skipTo pnet-install">Plugin Installation</p>
+          <p class="skipTo pnet-workflow">Plugin Workflow & Usage</p>
+          <p class="skipTo pnet-parameters">Plugin Parameters</p>
+          <p class="skipTo pnet-issues">Plugin Issues</p>
+          <p class="skipTo cep-examples">Examples</p>          
+          <p class="skipTo cep-example-block">Activation of Cardiac Tissue</p>
+          <p class="skipTo cep-example-pnet">Activation of Purkinje Network</p>
+          <p class="skipTo cep-refs">References</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo mechanics-modeling">Cardiac Mechanics Modeling</h4>
+        <div>
+          <p class="skipTo mechanics-solve">Solve Cardiac Mechanics with svFSI</p>
+          <p class="skipTo mechanics-obtain-svFSI">Obtain svFSI</p>
+          <p class="skipTo mechanics-mesh-gen">Model Construction & Mesh Generation</p>
+          <p class="skipTo mechanics-fiber-gen">Fiber Generation</p>
+          <p class="skipTo mechanics-solver-input">Input File</p>
+          <p class="skipTo mechanics-simulation">Run Simulation</p>
+          <p class="skipTo mechanics-theory">Structure Solver</p>
+          <p class="skipTo mechanics-kinematics">Kinematics</p>
+          <p class="skipTo mechanics-struct">STRUCT: displacement-based elastodynamics</p>
+          <p class="skipTo mechanics-ustruct">uSTRUCT: mixed formulation elastodynamics</p>          
+          <p class="skipTo mechanics-material-models">Material Models</p>
+          <p class="skipTo mechanics-refs">References</p>
         </div>
       </div>
     </section>
 
-  <section class="mainSection">
-    <form class="mainBody"> 
-      <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
-    </form>
+    <section class="docsSection" style="float: right">
+      <span id="introduction">
+        <zero-md class="embedMath" src="/documentation/simcardio/_intro.md" no-shadow></zero-md>
+      </span>
+      <span id="automatic-cardiac-modeling">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_auto-cardiac-modeling.md" no-shadow></zero-md>
+      </span>
+      <span id="seg-intro">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_seg-intro.md" no-shadow></zero-md>
+      </span>
+      <span id="seg-inputs">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_seg-inputs.md" no-shadow></zero-md>
+      </span>
+      <span id="seg-pre-trained-models">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_seg-pre-trained-models.md" no-shadow></zero-md>
+      </span>
+      <span id="seg-predict">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_seg-predict.md" no-shadow></zero-md>
+      </span>
+      <span id="seg-visualize">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_seg-visualize.md" no-shadow></zero-md>
+      </span>
+      <span id="mesh-intro">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_mesh-intro.md" no-shadow></zero-md>
+      </span>
+      <span id="mesh-lv-surface">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_mesh-lv-surface.md" no-shadow></zero-md>
+      </span>
+      <span id="mesh-volume">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_mesh-volume.md" no-shadow></zero-md>
+      </span>
+      <span id="mesh-register">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_mesh-register.md" no-shadow></zero-md>
+      </span>
+      <span id="mesh-motion">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_mesh-motion.md" no-shadow></zero-md>
+      </span>
+      <span id="refs">
+        <zero-md class="embedMath" src="/documentation/simcardio/cardiacModeling/_refs.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-modeling">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-modeling.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-intro">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-intro.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-theory">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-theory.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-activation-models">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-activation-models.md" no-shadow></zero-md>
+      </span>
+      <span id="purkinje">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_purkinje.md" no-shadow></zero-md>
+      </span>
+      <span id="pnet-intro">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_pnet-intro.md" no-shadow></zero-md>
+      </span>
+      <span id="pnet-install">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_pnet-install.md" no-shadow></zero-md>
+      </span>
+      <span id="pnet-workflow">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_pnet-workflow.md" no-shadow></zero-md>
+      </span>
+      <span id="pnet-parameters">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_pnet-parameters.md" no-shadow></zero-md>
+      </span>
+      <span id="pnet-issues">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_pnet-issues.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-examples">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-examples.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-example-block">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-example-block.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-example-pnet">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-example-pnet.md" no-shadow></zero-md>
+      </span>
+      <span id="cep-refs">
+        <zero-md class="embedMath" src="/documentation/simcardio/electrophysiology/_cep-refs.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-modeling">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-modeling.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-solve">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-solve.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-obtain-svFSI">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-obtain-svFSI.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-mesh-gen">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-mesh-gen.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-fiber-gen">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-fiber-gen.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-solver-input">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-solver-input.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-simulation">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-simulation.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-theory">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-theory.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-kinematics">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-kinematics.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-struct">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-struct.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-ustruct">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-ustruct.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-material-models">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-material-models.md" no-shadow></zero-md>
+      </span>
+      <span id="mechanics-refs">
+        <zero-md class="embedMath" src="/documentation/simcardio/mechanics/_mechanics-refs.md" no-shadow></zero-md>
+      </span>
+    </section>
+  </section>
+  <section class="skipToTopSection">
+    <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
   </section>
 
-  <!-- Lightweight client-side loader that feature-detects and load polyfills only when necessary -->
-  <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
 
-  <!-- Load the element definition -->
-  <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
-  </body>
+  <script>
+    var allZero_MD_File = document.getElementsByClassName("embedMath");
+    for(var i = 0; i < allZero_MD_File.length; i++)
+    {
+      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+      var el = document.createElement('script');
+      el.src = 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js';
+      document.head.appendChild(el);
+    });
+    }
+    
+  </script>
+
+  <!-- Style CSS -->
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/grayscale.css">
+  <link rel="stylesheet" href="/css/standards.css">
+  <link rel="stylesheet" href="/css/documentation.css">
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <script src="/js/jquery-2.1.1.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
+
+  <!-- <script src="js/jquery-2.1.1.js"></script> -->
+  <script src="/js/jquery.mixitup.min.js"></script>
+
+  
+
+  <script src="/js/documentation.js"></script>
+
+</body>
   
 </html>
