working mathjax without error but duplicate css?

--- a/documentation/htmlFiles/flowsolver.html
+++ b/documentation/htmlFiles/flowsolver.html
@@ -262,7 +262,7 @@
     {
       allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
       var el = document.createElement('script');
-      el.src = 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js';
+      el.src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML";
       document.head.appendChild(el);
     });
     }
