finish rough of documentation

--- a/documentation/htmlFiles/python_interface.html
+++ b/documentation/htmlFiles/python_interface.html
@@ -137,13 +137,92 @@
       <div>
         <h4 class="skipTo introduction">Introduction</h4>
       </div>
+      <div>
+        <h4 class="skipTo python_prog_env">Python Environment</h4>
+      </div>
+      <div>
+        <h4 class="skipTo console">Python Console</h4>
+        <div>
+          <p class="skipTo console_mode">Console Mode</p>
+          <p class="skipTo text_edit_mode">Text Edit Mode</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo python_shell">Python Shell</h4>
+      </div>
+      <div>
+        <h4 class="skipTo sv_modules">SimVascular Python Modules</h4>
+        <div>
+          <p class="skipTo projects">SimVascular Projects</p>
+          <p class="skipTo help">Interactive Help</p>
+          <p class="skipTo function_arguments">Function Arguments</p>
+          <p class="skipTo error_handling">Error Handling</p>
+          <p class="skipTo dmg_module">Dmg Module</p>
+          <p class="skipTo geometry_module">Geometry Module</p>
+          <p class="skipTo meshing_module">Meshing Module</p>
+          <p class="skipTo modeling_module">Modeling Modul</p>
+          <p class="skipTo path_planning_module">Path Planning Module</p>
+          <p class="skipTo segmentation_module">Segmentation Module</p>
+          <p class="skipTo vmtk_module">Vmtk Module</p>
+        </div>
+      </div>
     </section>
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="/documentation/simcardio/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="/documentation/python_interface/_intro.md" no-shadow></zero-md>
       </span>
-      
+      <span id="python_prog_env">
+        <zero-md class="embedMath" src="/documentation/python_interface/_python_prog_env.md" no-shadow></zero-md>
+      </span>
+      <span id="console">
+        <zero-md class="embedMath" src="/documentation/python_interface/_console.md" no-shadow></zero-md>
+      </span>
+      <span id="console_mode">
+        <zero-md class="embedMath" src="/documentation/python_interface/_console_mode.md" no-shadow></zero-md>
+      </span>
+      <span id="text_edit_mode">
+        <zero-md class="embedMath" src="/documentation/python_interface/_text_edit_mode.md" no-shadow></zero-md>
+      </span>
+      <span id="python_shell">
+        <zero-md class="embedMath" src="/documentation/python_interface/_python_shell.md" no-shadow></zero-md>
+      </span>
+      <span id="sv_modules">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_sv_modules.md" no-shadow></zero-md>
+      </span>
+      <span id="projects">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_projects.md" no-shadow></zero-md>
+      </span>
+      <span id="help">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_help.md" no-shadow></zero-md>
+      </span>
+      <span id="function_arguments">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_function_arguments.md" no-shadow></zero-md>
+      </span>
+      <span id="error_handling">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_error_handling.md" no-shadow></zero-md>
+      </span>
+      <span id="dmg_module">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_dmg_module.md" no-shadow></zero-md>
+      </span>
+      <span id="geometry_module">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_geometry_module.md" no-shadow></zero-md>
+      </span>
+      <span id="meshing_module">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_meshing_module.md" no-shadow></zero-md>
+      </span>
+      <span id="modeling_module">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_modeling_module.md" no-shadow></zero-md>
+      </span>
+      <span id="path_planning_module">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_path_planning_module.md" no-shadow></zero-md>
+      </span>
+      <span id="segmentation_module">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_segmentation_module.md" no-shadow></zero-md>
+      </span>
+      <span id="vmtk_module">
+        <zero-md class="embedMath" src="/documentation/python_interface/modules/_vmtk_module.md" no-shadow></zero-md>
+      </span>
     </section>
   </section>
   <section class="skipToTopSection">
