--- a/documentation/htmlFiles/rom_simulation.html
+++ b/documentation/htmlFiles/rom_simulation.html
@@ -20,33 +20,256 @@
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/grayscale.css">
   <link rel="stylesheet" href="/css/standards.css">
-  <!-- <link rel="stylesheet" href="css/home.css"> -->
   <link rel="stylesheet" href="/css/documentation.css">
+
+  <script>
+    MathJax = {
+      tex: {
+        inlineMath: [
+          ['$', '$'],
+          ['$$', '$$'],
+          ['\\(', '\\)'],
+        ],
+      },
+    };
+  </script>
+  
+  <script>
+    window.ZeroMdConfig = {
+      cssUrls: ['/css/bootstrap.css',"/css/grayscale.css","/css/standards.css","/css/shop-item.css","/css/documentation.css"]
+    }
+  </script>
+  
+  <script
+    type="module"
+    src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"
+  ></script>
 
     <!-- browser tab labels -->
     <link rel="shortcut icon" type="image/jpg" href="/img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
-  <section class="header">
-    <div class="topLeftLogo">      
-        <div class="headerLogoContainer">
-          <img class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+    <section class="header">
+      <div class="topLeftLogo">  
+          <!-- logo top left -->
+          <div class="headerLogoContainer">
+            <img id="logo" class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+          </div>
+          <!-- nav bar top right; same for all -->
+          <div class="headerNavBar">
+            <details>
+              <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
+              <div class="navBarSection">
+                <details>
+                  <summary class="navTitle">User Guides</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/quickguide.html">Getting Started</p>
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/modeling.html">Modeling Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/meshing.html">Meshing Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/flowsolver.html">Simulation Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/svfsi.html">svFSI Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/simcardio.html">SimCardio Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/genbc.html">General B.C. Guide</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/python_interface.html">Python Interface</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="/documentation/htmlFiles/references.html">References</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
+                    </div>
+                  </div>
+                </details>
+                <details>
+                  <summary class="navTitle">Clinical Cases</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase3.html">Coronary Normal</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="">Healthy Pulmonary</a>                  
+                    </div>
+                  </div>
+                </details>
+                <details>
+                  <summary class="navTitle">Developer Guides</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
+                    </div>
+                  </div>
+                </details>
+              </div>
+          </div>
+        </div>
+    </section>
+
+  <section class="mainSection">
+    <section class="navigationSection" style="float: left">
+      <div>
+        <h4 class="skipTo introduction">Introduction</h4>
+      </div>
+      <div>
+        <h4 class="skipTo tool">ROM Simulation Tool</h4>
+        <div>
+            <p class="skipTo mesh-panel">Mesh Panel</p>
+            <p class="skipTo basic-panel">Basic Parameters Panel</p>
+            <p class="skipTo bcs-panel">Inlet and Outlet BCs Panel</p>
+            <p class="skipTo wall-props-panel">Wall Properties Panel</p>
+            <p class="skipTo solver-params-panel">Solver Parameters Panel</p>
+            <p class="skipTo create-files-panel">Create Files and Run Simulation Panel</p>
+            <p class="skipTo convert-results-panel">Convert Results Panel</p>
+            <p class="skipTo tool-tutorial">Tutorial</p>
+            <p class="skipTo tool-refs">References</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo 1d-solver">1D Solver</h4>
+        <div>
+          <p class="skipTo 1d-solver-theory">Theory</p>
+          <p class="skipTo 1d-solver-user-guide">User Guide</p>
+          <p class="skipTo 1d-solver-input-file">Input File Format</p>
+          <p class="skipTo 1d-solver-example-bifurcation-rcr">Example: Bifurcation with RCR BCs</p>
+          <p class="skipTo 1d-solver-example-tube-resistance">Example: Tube with resistance BCs</p>
+          <p class="skipTo 1d-solver-refs">References</p>
+        </div>
+      </div>
+      <div>
+        <h4 class="skipTo 0d-solver">0D Solver</h4>
+        <div>
+          <p class="skipTo 0d-solver-theory">Theory</p>
+          <p class="skipTo 0d-solver-refs">References</p>
         </div>
       </div>
     </section>
 
-  <section class="mainSection">
-    <form class="mainBody"> 
-      <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
-    </form>
+    <section class="docsSection" style="float: right">
+      <span id="introduction">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/_intro.md" no-shadow></zero-md>
+      </span>
+      <span id="tool">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_tool.md" no-shadow></zero-md>
+      </span>
+      <span id="mesh-panel">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_mesh-panel.md" no-shadow></zero-md>
+      </span>
+      <span id="basic-panel">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_basic-panel.md" no-shadow></zero-md>
+      </span>
+      <span id="bcs-panel">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_bcs-panel.md" no-shadow></zero-md>
+      </span>
+      <span id="wall-props-panel">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_wall-props-panel.md" no-shadow></zero-md>
+      </span>
+      <span id="solver-params-panel">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_solver-params-panel.md" no-shadow></zero-md>
+      </span>
+      <span id="create-files-panel">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_create-files-panel.md" no-shadow></zero-md>
+      </span>
+      <span id="convert-results-panel">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_convert-results-panel.md" no-shadow></zero-md>
+      </span>
+      <span id="tool-tutorial">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_tutorial.md" no-shadow></zero-md>
+      </span>
+      <span id="tool-refs">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/tool/_refs.md" no-shadow></zero-md>
+      </span>
+      <span id="1d-solver">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/1d-solver/_solver.md" no-shadow></zero-md>
+      </span>
+      <span id="1d-solver-theory">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/1d-solver/_theory.md" no-shadow></zero-md>
+      </span>
+      <span id="1d-solver-user-guide">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/1d-solver/_user-guide.md" no-shadow></zero-md>
+      </span>
+      <span id="1d-solver-input-file">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/1d-solver/_input-file.md" no-shadow></zero-md>
+      </span>
+      <span id="1d-solver-example-bifurcation-rcr">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/1d-solver/_example-bifurcation-rcr.md" no-shadow></zero-md>
+      </span>
+      <span id="1d-solver-example-tube-resistance">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/1d-solver/_example-tube-resistance.md" no-shadow></zero-md>
+      </span>
+      <span id="1d-solver-refs">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/1d-solver/_refs.md" no-shadow></zero-md>
+      </span>
+      <span id="0d-solver">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/0d-solver/_solver.md" no-shadow></zero-md>
+      </span>
+      <span id="0d-solver-theory">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/0d-solver/_theory.md" no-shadow></zero-md>
+      </span>
+      <span id="0d-solver-refs">
+        <zero-md class="embedMath" src="/documentation/rom_simulation/0d-solver/_refs.md" no-shadow></zero-md>
+      </span>
+    </section>
+  </section>
+  <section class="skipToTopSection">
+    <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
   </section>
 
-  <!-- Lightweight client-side loader that feature-detects and load polyfills only when necessary -->
-  <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@2/webcomponents-loader.min.js"></script>
 
-  <!-- Load the element definition -->
-  <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
-  </body>
+  <script>
+    var allZero_MD_File = document.getElementsByClassName("embedMath");
+    for(var i = 0; i < allZero_MD_File.length; i++)
+    {
+      allZero_MD_File[i].addEventListener('zero-md-rendered', () => {
+      var el = document.createElement('script');
+      el.src = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML";
+      document.head.appendChild(el);
+    });
+    }
+    
+  </script>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+  <script src="/js/jquery-2.1.1.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
+
+  <!-- <script src="js/jquery-2.1.1.js"></script> -->
+  <script src="/js/jquery.mixitup.min.js"></script>
+
+  
+
+  <script src="/js/documentation.js"></script>
+
+</body>
   
 </html>
