moved files and updated header

--- a/documentation/htmlFiles/python_interface.html
+++ b/documentation/htmlFiles/python_interface.html
@@ -106,16 +106,19 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="clinicalCase3.html">Coronary Normal</a>                  
+                      <p href="/clinical/htmlFiles/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="clinicalCase1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="/clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="clinicalCase2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="/clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="">Healthy Pulmonary</a>                  
+                      <p href="/clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
                     </div>
                   </div>
                 </details>
@@ -131,7 +134,6 @@
           </div>
         </div>
     </section>
-
   <section class="mainSection">
     <section class="navigationSection" style="float: left">
       <div>
