fix nav styling and delete ruby files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <nav id="navElement">
         <!-- <div class="navBarRow rowFormat"> -->
-          <div class="colContainsContent">
+          <div id="navigationSection">
             <table id="contentOfSkip">
                 <tr id="skipToHome">
                   <th>
@@ -270,10 +270,10 @@
               Clinical Case Studies</h2> 
           </div>
           <div class="docSection">
-            <a class="docLinks" target="_blank" href="clinicalCase3.html">Coronary Normal</a><br>
-            <a class="docLinks" target="_blank" href="clinicalCase1.html">Aortofemoral Normal - 1</a><br>
-            <a class="docLinks" target="_blank" href="clinicalCase2.html">Aortofemoral Normal - 2</a><br>
-            <a class="docLinks" target="_blank" href="clinicalCase4.html">Healthy Pulmonary</a>
+            <a class="docLinks" target="_blank" href="/clinical/htmlFiles/coronary.html">Coronary Normal</a><br>
+            <a class="docLinks" target="_blank" href="/clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a><br>
+            <a class="docLinks" target="_blank" href="/clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a><br>
+            <a class="docLinks" target="_blank" href="/clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>
           </div>
           <div class="docHeader ">
             <h2 class="media-heading"><i class="iconInHeader fa-solid fa-laptop-code">
